Tue Jan 26 13:27:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_common.GNU:
          tao_idl3_to_idl2 is located in HOST_ROOT/TAO/CIAO/bin with
          cross compilation

Tue Jan 26 12:52:57 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_NET_IF_DL_H macro.

        * ace/os_include/net/os_if.h:

          Removed hardcoding of ACE_HAS_IPHONE and ACE_HAS_MAC_OSX
          checks. If the platform defines ACE_HAS_NET_IF_DL_H macro,
          then <net/if_dl.h> will be included.

Tue Jan 26 04:35:17 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_MAC_OSX macro.

        * ace/OS_NS_netdb.cpp:
        * ace/os_include/net/os_if.h:

          Enabled ACE_OS::getmacaddress() for Mac OSX as well.
          It uses exactly the same code as the iPhone's addition below.

Tue Jan 26 04:18:54 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * ace/OS_NS_netdb.cpp:

          Implement ACE_OS::getmacaddress() for iPhone. The same implementation
          will probably work on Mac OS X as well. I will verify this in the
          future.

        * ace/os_include/net/os_if.h:

          Added "#include <net/if_dl.h>" to this file if ACE_HAS_IPHONE
          is defined. The ACE_OS::getmacaddress() depends on this include
          include file.

Mon Jan 25 18:58:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MEM_IO.cpp
          Added casts to fix CB2010 warnings

Mon Jan 25 18:49:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SPIPE_Stream.inl:
          Added casts to fix CB2010 warnings

Mon Jan 25 14:51:09 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified to best handle dependencies with a space or $(...) in
          them.   A GNU make substitute function call is used to escape